# rvvlalibm

./: CMakeLists.txt  LICENSE  README.md
include/: rvvlalibm.h
src/: vla_exp2_double.c  vla_exp2_single.c  vla_exp_double.c  vla_exp_single.c  vla_log10_double.c  vla_log10_single.c  vla_log2_double.c  vla_log2_single.c  vla_log_double.c  vla_log_single.c  vla_tanh_double.c  vla_tanh_single.c
